<resources>
    <string name="app_name">countdown-widget</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Widget displays a day countdown to a given date</string>
    <string name="event_title">Event Title</string>
    <string name="days_left_text">Text showing the remaining days in the countdown</string>
    <string name="color_black_hex">080100</string>
    <string name="text_color">Text Color</string>
    <string name="progress_bar_color">Progress Bar Color</string>
    <string name="background_bar_color">Background Bar Color</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="appwidget_date">appwidget_date</string>
    <string name="event_date">Event Date</string>
    <string name="appwidget_text_color">appwidget_text_color</string>
    <string name="color">Color</string>
    <string name="calendar_icon"></string>
    <string name="preview">Preview\n</string>
    <string name="licenses">Licenses</string>
    <string name="title_activity_widget_expanded_view">WidgetExpandedView</string>
    <string name="toggle_weekends">Include/Exclude Weekends from count</string>
    <string name="exclude_weekends">Exclude weekends from countdown</string>
    <string name="include_weekends">Include weekends in countdown</string>
</resources>