<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:labelFor="@id/appwidget_text"
        android:text="@string/configure" />

    <EditText
        android:inputType="text"
        android:id="@+id/appwidget_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_title" />

    <include layout="@layout/date_picker_button"
        android:id="@+id/date_picker_button" />

    <include layout="@layout/color_picker_button"
        android:id="@+id/text_color_picker"/>

    <include layout="@layout/color_picker_button"
        android:id="@+id/background_color_picker"/>

    <include layout="@layout/color_picker_button"
        android:id="@+id/progress_color_picker"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_widget"
        android:layout_gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        />

    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/preview" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/preview_image_view"
        android:visibility="visible"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/licenses"
            android:text="@string/licenses"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>


</LinearLayout>